--- a/MyRuns2ActionTab/app/src/main/res/values/strings.xml
+++ b/MyRuns2ActionTab/app/src/main/res/values/strings.xml
@@ -46,4 +46,37 @@
     <string name="misc">Misc.</string>
     <string name="webpage">Webpage</string>
     <string name="webpage_information">http://www.cs.dartmouth.edu/</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string-array name="InputTypeSpinner">
+        <item>Manual Entry</item>
+        <item>GPS</item>
+        <item>Automatic</item>
+    </string-array>
+    <string-array name="ActivityTypeSpinner">
+        <item>Running</item>
+        <item>Walking</item>
+        <item>Standing</item>
+        <item>Cycling</item>
+        <item>Hiking</item>
+        <item>Downhill Skiing</item>
+        <item>Cross-Country Skiing</item>
+        <item>Snowboarding</item>
+        <item>Skating</item>
+        <item>Swimming</item>
+        <item>Mountain Biking</item>
+        <item>Wheelchair</item>
+        <item>Elliptical</item>
+        <item>Other</item>
+    </string-array>
+    
+    <string-array name = "ManualInput">
+        <item>Date</item>
+        <item>Time</item>
+        <item>Duration</item>
+        <item>Distance</item>
+        <item>Calories</item>
+        <item>Heart Rate</item>
+        <item>Comment</item>
+    </string-array>>
+
 </resources>
