--- a/MyRuns2ActionTab/app/src/main/res/values/strings.xml
+++ b/MyRuns2ActionTab/app/src/main/res/values/strings.xml
@@ -1,6 +1,10 @@
 <resources>
     <string name="app_name">MyRuns2ActionTab</string>
 
+    <string name="alert_dialog_two_buttons_title">EditBox</string>
+    <string name="alert_dialog_ok">OK</string>
+    <string name="alert_dialog_cancel">CANCEL</string>
+
     //from profile
     <string name="profile_photo_content_description">Your profile photo:</string>
     <string name="your_name">Your Name</string>
@@ -46,6 +50,7 @@
     <string name="misc">Misc.</string>
     <string name="webpage">Webpage</string>
     <string name="webpage_information">http://www.cs.dartmouth.edu/</string>
+
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string-array name="InputTypeSpinner">
         <item>Manual Entry</item>
@@ -68,8 +73,8 @@
         <item>Elliptical</item>
         <item>Other</item>
     </string-array>
-    
-    <string-array name = "ManualInput">
+
+    <string-array name="ManualInput">
         <item>Date</item>
         <item>Time</item>
         <item>Duration</item>
@@ -77,6 +82,5 @@
         <item>Calories</item>
         <item>Heart Rate</item>
         <item>Comment</item>
-    </string-array>>
-
+    </string-array>
 </resources>
