--- a/MyRuns2ActionTab/app/src/main/res/values/strings.xml
+++ b/MyRuns2ActionTab/app/src/main/res/values/strings.xml
@@ -82,5 +82,5 @@
         <item>Calories</item>
         <item>Heart Rate</item>
         <item>Comment</item>
-    </string-array>
+    </string-array>>
 </resources>
